Correção da logo no footer

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
     <footer>
         <img class="container">
-            <img class="logo" src="src/img/" alt="Logo da Barbearia"></img>
+            <img class="logo" src="src/img/logo.png" alt="Logo da Barbearia"></img>
 
             <div class="midias">
                 <a href="https://www.facebook.com/barbearia" target="_blank"><img src="src/img/facebook.png" alt=""></a>
